# comp4300-project3

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  Makefile  Makefile_old  README.md
app/: lab3a.s  lab3b.s  main.cpp  test.s  test3.s  test_old.s
include/: simulator.h  simulator.hpp  types.h  types.hpp
include/exception/: illegal_encode_error.hpp  syntax_error.hpp  syntax_exception.hpp  unknown_instruction_error.hpp
include/instr/: functions.hpp  instruction.hpp  instruction_encoder.hpp  instruction_handler.cpp  instruction_handler.hpp  instruction_metadata.hpp  instruction_parser.hpp  instruction_set.hpp  instruction_type.hpp  opcodes.hpp
include/instr/handlers/: add_handler.hpp  addi_handler.hpp  beq_handler.hpp  bne_handler.hpp  lb_handler.hpp  lui_handler.hpp  ori_handler.hpp  sll_handler.hpp  slt_handler.hpp  syscall_handler.hpp
include/instr/parsers/: add_parser.hpp  addi_parser.hpp  b_parser.hpp  beq_parser.hpp  beqz_parser.hpp  bge_parser.hpp  bne_parser.hpp  la_parser.hpp  lb_parser.hpp  li_parser.hpp  lui_parser.hpp  nop_parser.hpp  ori_parser.hpp  sll_parser.hpp  slt_parser.hpp  subi_parser.hpp  syscall_parser.hpp
include/memory/: memory.h  memory.hpp
include/pipeline/: execution_buffer.hpp  instruction_decode_buffer.hpp  instruction_fetch_buffer.hpp  memory_buffer.hpp
include/pipeline_old/: ex_mem_buffer.hpp  id_ex_buffer.hpp  if_id_buffer.hpp  mem_wb_buffer.hpp
include/reader/: file_reader.hpp
include/registers/: register_bank.hpp
include/utils/: string_utils.hpp
scripts/: build.sh  clean.sh  clear_logs.sh  test.sh
src/: main.cpp  simulator.cpp
src/instr/: instruction.cpp  instruction_encoder.cpp  instruction_set.cpp
src/instr/handlers/: add_handler.cpp  addi_handler.cpp  beq_handler.cpp  bne_handler.cpp  lb_handler.cpp  lui_handler.cpp  ori_handler.cpp  sll_handler.cpp  slt_handler.cpp  syscall_handler.cpp
src/instr/parsers/: add_parser.cpp  addi_parser.cpp  b_parser.cpp  beq_parser.cpp  beqz_parser.cpp  (+12 more)
src/memory/: memory.cpp
src/reader/: file_reader.cpp
src/registers/: register_bank.cpp
src/utils/: string_utils.cpp
tests/: main_tests.cpp
tests/instr/: instruction_encoder_tests.cpp  instruction_set_tests.cpp  instruction_tests.cpp
tests/memory/: memory_tests.cpp
tests/mocks/: itype_instruction_parser.cpp  itype_instruction_parser.hpp  jtype_instruction_parser.cpp  jtype_instruction_parser.hpp  psuedo_type_instruction_parser.cpp  rtype_instruction_parser.cpp  rtype_instruction_parser.hpp
tests/registers/: register_bank_tests.cpp
tests/src/: main_tests.cpp
tests/utils/: string_utils_test.cpp
(+19 files in other folders)
